feature: make responsivity for desktop

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -15,18 +15,19 @@ body {
 :root {
     /* Font sizes  */
     --fontSmall: 0.75rem;
-    --fontMedium: 1.125rem;
+    --fontMedium: 1.25rem;
     --fontLarge: 1.5rem;
-    --fontXLarge: 3rem;
     /* Color */
     --orange: #FC4C02;
     --darkGray: #75797A;
-    --lightGray: #B2B2B2
-    /* Spacing */
-    --mainPadding: 140px;
-    /* size */
-    --small: 100px;
-    --medium: 170px;
-    --large: 200px;
-    --xLarge: 220px;
+    --lightGray: #B2B2B2;
+}
+
+@media only screen and (min-width: 800px) {
+    :root {
+        /* Font sizes  */
+        --fontSmall: 1rem;
+        --fontMedium: 1.5rem;
+        --fontLarge: 2.5rem;
+    }
 }
